--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -8,3 +8,9 @@
         state: present
       when: ansible_os_family == "Debian"
 
+    - name: I want to install webserver on redhat only
+      apt:
+        name: httpd
+        state: present
+      when: ansible_os_family == "redhat"
+
