--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -9,7 +9,7 @@
       when: ansible_os_family == "Debian"
 
     - name: I want to install webserver on redhat only
-      apt:
+      yum:
         name: httpd
         state: present
       when: ansible_os_family == "redhat"
