--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -7,10 +7,22 @@
         name: "{{ mywebpackageforubuntu }}"
         state: present
       when: ansible_os_family == "Debian"
+    
+    - name: I want to start webservice on ubuntu
+      service:
+        name: "{{ mywebpackageforubuntu }}"
+        state: started
+      when: ansible_os_family="Debian"
 
     - name: I want to install webserver on redhat only
       yum:
         name: "{{ mywebpackageforredhat }}"
         state: present
+      when: ansible_os_family == "redhat"
+
+    - name: I want to start webservice on redhat
+      service:
+        name: "{{ mywebpackageforredhat }}"
+        state: started
       when: ansible_os_family == "redhat"
 
