--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -23,6 +23,6 @@
     - name: I want to start webservice on redhat
       service:
         name: "{{ mywebpackageforredhat }}"
-        state: started
+        state: restarted
       when: ansible_os_family == "redhat"
 
